# fastCDS

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  wheels.yml
benchmarks/: README.md  build_ensdb.R  build_human_tool_inputs.py  compare_intervals.py  ensembldb_query.R  environment.yml  geneplot_human.py  make_figure1.py  make_figure_1.py  make_panel_d.py  make_phase3_table1_4tools.py  make_scaling_outputs.py  parallel_benchmark.py  proteintogenome_results.tsv  run_benchmark.py  run_transvar.py  scaling_benchmark.py  threads_batch_grid.py  validate_vs_ensembldb.py  visprodom_bench.R  visprodom_human.R
examples/: tp53_isoforms.tsv
include/: common.hpp
notebooks/: README.md  benchmarking.ipynb  clinvar_pathogenic.ipynb  pfam_proteome_atlas.ipynb  proteintogenome_comparison.ipynb  scaling_and_ram.ipynb  software_comparison.ipynb  validation.ipynb  walkthrough_end_to_end.ipynb
packaging/: verify_clean_build.sh
packaging/bioconda/: README.md
packaging/pypi/: README.md
packaging/zenodo/: README.md  build_indices.sh
parsing/: README.md  append_custom_proteins.py  prepare_from_interpro.py  prepare_from_pfam.py  prepare_from_uniprot_features.py
python/: README.md  pyproject.toml
python/fastCDS/: __init__.py  _binary.py  _cli.py  _client.py  _interactive_html.py  _interactive_stack_html.py  _result.py  fetch.py  plot.py
python/fastCDS/prepare/: __init__.py  _interpro.py  _mapping.py  _pfam.py  _uniprot.py
python/prot2exon/: __init__.py  _binary.py  _cli.py  _client.py  _interactive_html.py  _interactive_stack_html.py  _result.py  fetch.py  plot.py
python/prot2exon/prepare/: __init__.py  _interpro.py  _pfam.py  _uniprot.py
reproduce_benchmarking_figures/: README.md
reproduce_benchmarking_figures/benchmarks/: README.md  build_human_tool_inputs.py  environment.yml  make_table_s1.py  proteintogenome_results.tsv  scaling_benchmark.py  table_S2_speed_memory.tsv  threads_batch_grid.tsv  validate_vs_ensembldb.py
reproduce_benchmarking_figures/benchmarks/matched/: run_geneplot.py  run_rest.py
reproduce_benchmarking_figures/notebooks/: scaling_and_ram.ipynb  software_comparison.ipynb
reproduce_isoform_figures/: 00_pull_biomart_pfam.py  01_pfam_catalytic.py  02_build_isoform_universe.py  03_domain_isoform_master.py  Fig1C_intact_skipped_trimmed.ipynb  Fig1D_two_modes_scatter.ipynb  Fig1E1F_symmetric_exons_and_gsea.ipynb  README.md  pfam_catalytic.tsv
reproduce_paper/: README.md
reproduce_paper/benchmarks/: README.md  build_human_tool_inputs.py  build_isoform_universe.py  classify_external.py  classify_mechanism.py  ensembldb_query.R  environment.yml  geneplot_human.py  genomicfeatures_query.R  isoform_conservation.py  make_scaling_outputs.py  make_table_s1.py  make_table_s2.py  parallel_benchmark.py  proteintogenome_bench.R  run_ensembl_rest.py  run_transvar.py  sample_validation_queries.py  scaling_benchmark.py  table_S1_agreement.tsv  table_S2_speed_memory.tsv  threads_batch_grid.py  validate_vs_ensembldb.py  visprodom_bench.R  visprodom_human.R
reproduce_paper/benchmarks/matched/: README.md  prepare_matched_inputs.py  run_ensembldb.R  run_gf_granges.R  run_matched_scaling.py
reproduce_paper/conservation/: domain_conservation_master.tsv
reproduce_paper/notebooks/: alphafold_plddt_junctions.ipynb  isoform_domain_conservation_analysis.ipynb  scaling_and_ram.ipynb  software_comparison.ipynb
scripts/: README.md  append_custom_proteins.py  prepare_from_pfam.py  prepare_from_uniprot_features.py
software_tests/: conftest.py  make_synthetic_gtf.py  test_bed12.py  test_compat.py  test_correctness.py  test_fetch.py  test_notebooks.py  test_plotting.py  test_python_api.py  test_schema.py
software_tests/golden/test_codon_split_across_exons/: domain_cds_segments.bed  domain_introns.tsv  domain_span_with_introns.bed
software_tests/golden/test_minus_strand_multi_exon_domain/: domain_blocks.bed  domain_cds_segments.tsv  domain_introns.tsv
software_tests/golden/test_no_domain_mode/: domain_introns.tsv  isoform_structure.tsv
software_tests/golden/test_plus_strand_multi_exon_domain/: domain_cds_segments.bed  domain_introns.bed  domain_mapping_summary.tsv  isoform_structure.tsv
software_tests/golden/test_versioned_unversioned_ids/: domain_cds_segments.tsv  domain_introns.tsv  domain_mapping_summary.tsv
src/: domain_mapper.cpp  domain_mapper.hpp  gtf_parser.cpp  gtf_parser.hpp  main.cpp  output_writer.cpp  output_writer.hpp
tests/: conftest.py  run_tests.py  test_compat.py  test_correctness.py  test_errors.py  test_fetch.py  test_notebooks.py  test_plotting.py  test_python_api.py  test_schema.py
tests/golden/test_codon_split_across_exons/: domain_blocks.bed12  domain_cds_segments.tsv  domain_introns.bed  domain_mapping_summary.tsv  isoform_structure.tsv
tests/golden/test_minus_strand_multi_exon_domain/: domain_cds_segments.bed  domain_introns.bed  domain_mapping_summary.tsv  domain_span_with_introns.bed  isoform_structure.tsv
tests/golden/test_no_domain_mode/: domain_cds_segments.tsv  domain_mapping_summary.tsv
tests/golden/test_plus_strand_multi_exon_domain/: domain_blocks.bed12  domain_cds_segments.tsv  domain_introns.tsv  domain_mapping_summary.tsv  domain_span_with_introns.bed
tests/golden/test_versioned_unversioned_ids/: domain_blocks.bed12  domain_mapping_summary.tsv  domain_span_with_introns.bed  isoform_structure.tsv
tutorial/: walkthrough_end_to_end.ipynb
tutorial/examples/: isoform_to_transcript_bed12.py  make_plot_gallery.py
tutorial/reproduce_paper/: README.md
wiki/: Architecture.md  Benchmarks.md  CLI-reference.md  Custom-proteins.md  FAQ.md  Genome-onboarding.md  Home.md  Index.md  Input-format.md  Installation.md  Mapping.md  Notebooks.md  Output-modes.md  Performance-and-Benchmarking.md  Performance-and-RAM.md  Plotting-and-viewers.md  Plotting.md  Python-API.md  Quickstart.md  Tutorials-and-Notebooks.md  Validation.md  _Sidebar.md
wiki/images/: plot_js.html  plot_plotly.html
(+26 files in other folders)
