# Top-level pyproject. The build is driven by scikit-build-core, which runs the
# CMake project (CMakeLists.txt) during the wheel build and bundles the compiled
# C++ binary into the package as `fastCDS/_bin/fastCDS-core`. So `pip install
# fastCDS` ships a ready-to-run binary — pre-built wheels are produced per
# platform by cibuildwheel (.github/workflows/wheels.yml); installing from the
# sdist compiles locally (needs a C++17 toolchain + CMake).
#
# The Python source lives under `python/fastCDS/` (see [tool.scikit-build]).

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[project]
name = "fastCDS"
version = "2.3.0"
description = "Map protein-domain coordinates to genomic CDS/UTR/intron structure at proteome scale."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Luis F. Soto Ugaldi" },
    { name = "George D. Muñoz Esquivel" },
]
keywords = [
    "bioinformatics", "protein-domain", "genomics", "exon", "intron",
    "mapping", "GTF", "Ensembl", "GENCODE", "RefSeq", "Pfam", "InterPro",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.4",
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[project.urls]
Homepage      = "https://github.com/SotoLF/fastCDS"
Repository    = "https://github.com/SotoLF/fastCDS"
Documentation = "https://github.com/SotoLF/fastCDS/wiki"
Issues        = "https://github.com/SotoLF/fastCDS/issues"

[project.scripts]
# The unified CLI: a cross-platform Python dispatcher (mirrors bin/fastCDS)
# that routes index/map to the bundled C++ binary and fetch/plot to Python.
"fastCDS" = "fastCDS._cli:main"
# Direct entry-point to the plotter, for users who only want the Python plotter.
"fastCDS-plot" = "fastCDS.plot:main"

# ----------------------------------------------------------------------
# Build: scikit-build-core drives CMake; the Python package lives under python/.
# ----------------------------------------------------------------------
[tool.scikit-build]
minimum-version = "0.8"
wheel.packages = ["python/fastCDS"]
sdist.include = ["src", "include", "CMakeLists.txt"]
cmake.version = ">=3.16"
cmake.build-type = "Release"
# The wheel ships a standalone binary, not a Python extension module, so it is
# Python-version-agnostic: one `py3-none-<platform>` wheel per OS/arch works on
# every CPython/PyPy 3.x. This keeps the cibuildwheel matrix small.
wheel.py-api = "py3"
