[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastCDS"
version = "2.3.0"
description = "Python client + plotter for the fastCDS C++ mapper."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "fastCDS contributors" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=1.4",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
# Only needed for the plotly engine of the interactive viewer
# (plot --out x.html --engine plotly / fc.plot(..., out="x.html", engine="plotly")).
# The default --engine js viewer is self-contained and needs nothing extra.
plotly = ["plotly>=5.0"]

[project.scripts]
# Direct Python entry-point for the plotter. The repo's bash wrapper
# `bin/fastCDS` remains the unified CLI; this is for users who only want
# the plotter without going through the wrapper.
"fastCDS-plot" = "fastCDS.plot:main"

[tool.setuptools]
packages = ["fastCDS"]
